--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "devDependencies": {
     "express": "^4.17.1",
     "jest": "^27.0.6",
-    "nodemon": "^2.0.11"
+    "nodemon": "^2.0.11",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4"
   }
 }
