--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "express": "^4.17.1",
     "jest": "^27.0.6",
+    "mongoose": "^5.13.2",
     "nodemon": "^2.0.11",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4"
