--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     restart: on-failure
     depends_on:
       - postgres
+      - redis
     ports:
       - "5000:5000"
     command: "npm start"
@@ -17,5 +18,12 @@ services:
       - "5432:5432"
     volumes:
       - pg_data:/var/lib/postgresql/data
+  redis:
+    image: redis:latest
+    container_name: cache
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./data:/data
 volumes:
   pg_data:
