--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "nodemon": "^2.0.11",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
+    "redis": "^3.1.2",
     "supertest": "^6.1.3"
+  },
+  "dependencies": {
+    "ioredis": "^4.27.8"
   }
 }
