--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,24 @@
 version: "3.9"
 services:
-  server:
-    container_name: "server"
+  server1:
+    container_name: "server1"
     build: .
     restart: on-failure
     depends_on:
       - postgres
       - redis
     ports:
-      - "5000:5000"
+      - "5001:5000"
+    command: "npm start"
+  server2:
+    container_name: "server2"
+    build: .
+    restart: on-failure
+    depends_on:
+      - postgres
+      - redis
+    ports:
+      - "5002:5000"
     command: "npm start"
   postgres:
     container_name: "postgres"
@@ -19,11 +29,16 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
   redis:
-    image: redis:latest
     container_name: cache
+    build: ./cache/.
     ports:
       - "6379:6379"
     volumes:
-      - ./data:/data
+      - ./config/redis.conf:/redis.conf
+  loadbalancer:
+    build: ./loadbalancer/.
+    restart: always
+    ports: 
+      - "3030:80"
 volumes:
   pg_data:
